# AirAware

./: .gitignore  README.md
WebPage/: index.html  index.html.bak  package-lock.json  package.json  wrangler.jsonc
WebPage/src/: App.css  App.tsx
backend/: .gitignore  AirAware.csproj  AirAware.http  AirAware.slnx  AirAware_backup.dump  BACKEND_DOKUMENTATION.md  DB_MIGRATION.md  Program.cs  UML_KLASSENDIAGRAMM.md  WeatherForecast.cs  appsettings.Production.json  appsettings.json  cloudflare-tunnel-config.yml  publish.ps1
backend/Attributes/: RequireAdminPinAttribute.cs  RequireApiKeyAttribute.cs
backend/Configuration/: JwtOptions.cs  MqttOptions.cs
backend/Controllers/: AuthController.cs  SensorDataController.cs  WeatherForecastController.cs
backend/Converters/: SensorDataConverter.cs
backend/DB/: Querys.sql
backend/Data/: AirAwareDbContext.cs
backend/Helpers/: AlertHelper.cs
backend/Middleware/: AdminPinAuthMiddleware.cs  ApiKeyAuthMiddleware.cs
backend/Models/: ChangePasswordRequest.cs  LoginRequest.cs  LoginResponse.cs  RegisterRequest.cs  SensorReading.cs  User.cs
backend/Properties/: launchSettings.json
backend/Services/: MqttSubscriberService.cs  TokenBlacklistService.cs
backend/Swagger/: AdminPinOperationFilter.cs  ApiKeyOperationFilter.cs
embedded/: .cproject  .project  CMakeLists.txt  sdkconfig
embedded/main/: CMakeLists.txt  HTML.h  Sensor.c  Sensor.h  hosting.c  hosting.h  main.c  mqtt_manager.c  mqtt_manager.h  wifi.c  wifi.h
frontend/: .gitignore  index.html  package-lock.json  package.json  wrangler.jsonc
(+85 files in other folders)
